--- a/AdatumDeployment.yml
+++ b/AdatumDeployment.yml
@@ -4,7 +4,7 @@
       win_psmodule:
         name: '{{ item }}'
         state: present
-      with_item:
+      with_items:
         - xActiveDirectory
         - xComputerManagement
         - xNetworking
