--- a/AdatumDeployment.yml
+++ b/AdatumDeployment.yml
@@ -36,4 +36,6 @@
       win_domain_controller: 
         dns_domain_name: adatum.com
         state: domain_controller
-        safe_mode_password: '{{ safe_mode_password_var }}'
+        safe_mode_password: '{{ safe_mode_password }}'
+        domain_admin_user: '{{ domain_admin_user }}'
+        domain_admin_password: '{{ domain_admin_password }}'
