--- a/AdatumDeployment.yml
+++ b/AdatumDeployment.yml
@@ -8,6 +8,7 @@
         - xActiveDirectory
         - xComputerManagement
         - xNetworking
+        - xDnsServer
 
     - name: Set hostname
       win_dsc: 
@@ -23,7 +24,7 @@
       win_dsc:
         resource_name: xDnsServerAddress
         AddressFamily: IPV4
-        InterfaceAlias: Chicago
+        InterfaceAlias: '{{ interface_alias }}'
         Address: 127.0.0.1
 
     - name: Set WinRM service to automatic
@@ -34,8 +35,19 @@
 
     - name: Promote to domain controller
       win_domain_controller: 
-        dns_domain_name: adatum.com
+        dns_domain_name: '{{ domain_name }}'
         state: domain_controller
         safe_mode_password: '{{ safe_mode_password }}'
         domain_admin_user: '{{ domain_admin_user }}'
         domain_admin_password: '{{ domain_admin_password }}'
+      register: PromoteToDomainController
+
+    - name: Reboot 2
+      win_reboot:
+      when: PromoteToDomainController.reboot_required == True
+
+    - name: Set DNS forwarders
+      win_dsc:
+        resource_name: xDnsServerForwarder
+        IsSingleInstance: Yes 
+        IPAddress: '{{ dns_forwarder_address }}'
