Adds DomainAdministratorCredential parameter to xADDomain

--- a/AdatumDeployment.yml
+++ b/AdatumDeployment.yml
@@ -44,6 +44,8 @@
         resource_name: xADDomain
         DomainName: '{{ domain_name }}'
         SafeModeAdministratorPassword: '{{ safe_mode_password }}'
+        DomainAdministratorCredential_username: '{{ DomainAdministratorCredential_username }}'
+        DomainAdministratorCredential_password: '{{ DomainAdministratorCredential_password }}'
       register: PromoteToDomainController
 
     - name: Reboot 2
